// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sorter /> проверяет различные направление сортировки 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  Лейбл
   
</a>
`;

exports[`<Sorter /> проверяет различные направление сортировки 2`] = `
<a
  href="#"
  onClick={[Function]}
>
  Лейбл
   
  <i
    aria-hidden="true"
    className="n2o-sorting-icon fa fa-sort-amount-asc"
  />
</a>
`;

exports[`<Sorter /> проверяет различные направление сортировки 3`] = `
<a
  href="#"
  onClick={[Function]}
>
  Лейбл
   
  <i
    aria-hidden="true"
    className="n2o-sorting-icon fa fa-sort-amount-desc"
  />
</a>
`;

exports[`<Sorter /> проверяет рендер по умолчанию 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  Лейбл
   
</a>
`;
